RESOLVED FIXED 87352
cut, copy, paste event won't be fired in Shadow DOM.
https://bugs.webkit.org/show_bug.cgi?id=87352
Summary cut, copy, paste event won't be fired in Shadow DOM.
Shinya Kawanaka
Reported 2012-05-24 01:07:50 PDT
These events should be fired appropriately in Shadow DOM.
Attachments
Patch (7.16 KB, patch)
2012-05-24 01:38 PDT, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-05-24 01:38:24 PDT
Dimitri Glazkov (Google)
Comment 2 2012-05-24 09:09:31 PDT
Comment on attachment 143758 [details] Patch I am ok with anime characters in our tests.
WebKit Review Bot
Comment 3 2012-05-27 22:14:06 PDT
Comment on attachment 143758 [details] Patch Clearing flags on attachment: 143758 Committed r118648: <http://trac.webkit.org/changeset/118648>
WebKit Review Bot
Comment 4 2012-05-27 22:14:17 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 5 2019-02-06 09:19:04 PST
Mass move bugs into the DOM component.
Ryosuke Niwa
Comment 6 2019-02-06 22:01:52 PST
Copy & paste is editing.
Note You need to log in before you can comment on or make changes to this bug.