cut, copy or paste event won't be fired in Shadow DOM. https://bugs.webkit.org/show_bug.cgi?id=87352

Reviewed by Dimitri Glazkov.

Source/WebCore:

cut, copy or paste event was not fired in Shadow DOM.
Since event re-targeting has been implemented, it should be safe to fire them in Shadow DOM now.

Tests: fast/dom/shadow/cppevent-in-shadow.html
       fast/dom/shadow/cppevent-input-in-shadow.html

* editing/Editor.cpp:
(WebCore::Editor::findEventTargetFrom):

LayoutTests:

* fast/dom/shadow/cppevent-in-shadow-expected.txt: Added.
* fast/dom/shadow/cppevent-in-shadow.html: Added.
* fast/dom/shadow/cppevent-input-in-shadow-expected.txt: Added.
* fast/dom/shadow/cppevent-input-in-shadow.html: Added.


Canonical link: https://commits.webkit.org/105393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118648 268f45cc-cd09-0410-ab3c-d52691b4dbfc